--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 .title {
 	font-size: 2rem;
 }
-@media (max-width: 460px) {
+@media (max-width: 480px) {
 	.title {
 		font-size: 1.66rem;
 	}
@@ -15,9 +15,8 @@ body {
 
 .wrapper {
 	margin: 36px auto 0;
-	width: 460px;
 }
-@media (max-width: 460px) {
+@media (max-width: 480px) {
 	.wrapper {
 		margin: 20px auto 0;
 		width: 240px;
@@ -31,12 +30,124 @@ body {
 	padding: 12px;
 	background: rgba(255,255,255,0.75);
 }
+@media not ((hover: hover) and (pointer: fine)) {
+	.keyboard-friendly {
+		display: none;
+	}
+}
 
 .keyboard-friendly-img {
 	width: 70px;
 	display: block;
 }
 
+.center {
+	text-align: center;
+}
+
+.top-text {
+	margin-bottom: 2rem;
+	font-size: 1rem;
+}
+@media (max-width: 480px) {
+	.top-text {
+		font-size: 0.66rem;
+	}
+}
+
+.current-player-wrapper {
+	color: black;
+	margin: 0 0 0.75rem;
+	font-weight: normal;
+}
+.current-player-wrapper .red,
+.current-player-wrapper .black {
+	position: relative;
+}
+.current-player-wrapper .red::after,
+.current-player-wrapper .black::after,
+.current-player-wrapper .dead::after {
+	display: block;
+	width: 16px;
+	height: 16px;
+	content: "";
+	position: absolute;
+	right: 6px;
+	top: 8px;
+	border-radius: 50%;
+}
+#current-player {
+	border-bottom: 1px solid black;
+	padding: 0 1.25em 0 0.25em;
+}
+#current-player.red::after {
+	background: linear-gradient(to bottom, #ff1616 0%,#ad0505 100%);
+}
+#current-player.black::after {
+	background: linear-gradient(to bottom, #333 0%,#000000 100%);
+}
+#current-player.dead::after {
+	background: linear-gradient(to bottom, #669 0%,#333366 100%);
+}
+
+.other-player-wrapper {
+	color: #bbb;
+	margin: 0;
+	font-weight: normal;
+}
+.game-over .other-player-wrapper {
+	opacity: 0;
+}
+#other-player {
+	border-bottom: 1px solid #bbb;
+	padding: 0 1.25em 0 0.25em;
+}
+
+.controls {
+	margin: 1.25em 0 0.25em 0;
+}
+
+.play-again {
+	opacity: 0;
+}
+.game-over .play-again {
+	opacity: 1;
+	transition: 0.5s;
+}
+
+.play-again-btn {
+	display: inline-block;
+	border: none;
+	margin-bottom: 2em;
+	height: 40px;
+	line-height: 40px;
+	width: 16em;
+	background: mediumseagreen;
+	color: white;
+	text-decoration: none;
+}
+.play-again-btn:hover,
+.play-again-btn:focus {
+	background: #359660;
+}
+.play-again-btn:hover {
+	background: #359660;
+}
+
+
+/* Board */
+.board {
+	margin: 0 auto;
+	border-collapse: collapse;
+}
+.board .board-label-x {
+	padding-top: 1em;
+	text-align: center;
+}
+.board .board-label-y {
+	padding-right: 1em;
+	text-align: center;
+}
 .board button {
 	display: block;
 	width: 60px;
@@ -64,105 +175,13 @@ body {
 	background: #000;
 	background: linear-gradient(to bottom, #333 0%,#000000 100%);
 }
-@media (max-width: 460px) {
+.board button.dead {
+	background: #000;
+	background: linear-gradient(to bottom, #669 0%,#333366 100%);
+}
+@media (max-width: 480px) {
 	.board button {
 		width: 30px;
 		height: 30px;
 	}
-}
-
-.play-again {
-	height: 0px;
-	overflow: hidden;
-}
-.play-again.show {
-	height: 40px;
-	transition: 0.75s;
-}
-
-.play-again-btn {
-	display: inline-block;
-	margin-bottom: 2em;
-	height: 40px;
-	line-height: 40px;
-	width: 50%;
-	background: mediumseagreen;
-	color: white;
-	text-decoration: none;
-	opacity: 0.9;
-}
-.play-again-btn:hover,
-.play-again-btn:focus {
-	background: #359660;
-}
-.play-again:hover {
-	opacity: 1;
-}
-
-.top-text {
-	margin-bottom: 2rem;
-	font-size: 1rem;
-}
-@media (max-width: 460px) {
-	.top-text {
-		font-size: 0.66rem;
-	}
-}
-
-.primary {
-	color: black;
-	margin: 0 0 0.75rem;
-	font-weight: normal;
-}
-.primary .red,
-.primary .black {
-	position: relative;
-}
-.primary .red::after,
-.primary .black::after {
-	display: block;
-	width: 16px;
-	height: 16px;
-	content: "";
-	position: absolute;
-	right: 6px;
-	top: 8px;
-	border-radius: 50%;
-}
-.primary [contenteditable="true"] {
-	border-bottom: 1px solid black;
-	padding: 0 1.25em 0 0.25em;
-}
-.primary [contenteditable="true"].red::after {
-	background: linear-gradient(to bottom, #ff1616 0%,#ad0505 100%);
-}
-.primary [contenteditable="true"].black::after {
-	background: linear-gradient(to bottom, #333 0%,#000000 100%);
-}
-
-.secondary {
-	color: #bbb;
-	margin: 0;
-	font-weight: normal;
-}
-.secondary [contenteditable="true"] {
-	border-bottom: 1px solid #bbb;
-	padding: 0 1.25em 0 0.25em;
-}
-
-.code {
-	position: absolute;
-	bottom: 5px;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
-
-	font-size: 12px;
-	color: #bbb;
-	padding: 4px 8px;
-	background: rgba(255,255,255,0.75);
-}
-
-.center {
-	text-align: center;
 }
